--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -234,18 +234,18 @@ alias BU.MBGetInstallableLangNB.Windows='BU.Hardware.Windows.Motherboard.GetInst
 alias BU.MBGetInstallableLangList='BU.Hardware.Motherboard.GetInstallableLanguagesList';
 alias BU.MBGetInstallableLangList.Android='BU.Hardware.Android.Motherboard.GetInstallableLanguagesList';
 alias BU.MBGetInstallableLangList.BSD='BU.Hardware.BSD.Motherboard.GetInstallableLanguagesList';
-alias BU.MBGetInstallableLangList.Haiku='BU.Hardware.Motherboard.GetInstallableLanguagesList';
-alias BU.MBGetInstallableLangList.Linux='BU.Hardware.Motherboard.GetInstallableLanguagesList';
-alias BU.MBGetInstallableLangList.OSX='BU.Hardware.Motherboard.GetInstallableLanguagesList';
-alias BU.MBGetInstallableLangList.Windows='BU.Hardware.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Haiku='BU.Hardware.Haiku.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Linux='BU.Hardware.Linux.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.OSX='BU.Hardware.OSX.Motherboard.GetInstallableLanguagesList';
+alias BU.MBGetInstallableLangList.Windows='BU.Hardware.Windows.Motherboard.GetInstallableLanguagesList';
 
 alias BU.MBGetInstalledLang='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.Android='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.BSD='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.Haiku='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.Linux='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.OSX='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
-alias BU.MBGetInstalledLang.Windows='BU.Hardware.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Android='BU.Hardware.Android.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.BSD='BU.Hardware.BSD.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Haiku='BU.Hardware.Haiku.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Linux='BU.Hardware.Linux.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.OSX='BU.Hardware.OSX.Motherboard.GetCurrentlyInstalledLanguage';
+alias BU.MBGetInstalledLang.Windows='BU.Hardware.Windows.Motherboard.GetCurrentlyInstalledLanguage';
 
 ## ----------------------------------------------
 
