--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -43,6 +43,194 @@
 
 ## SUB-CATEGORY : ""
 
+alias BU.IsBatteryIsNotOnAc='BU.Hardware.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.Android='BU.Hardware.Android.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.BSD='BU.Hardware.BSD.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.Haiku='BU.Hardware.Haiku.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.Linux='BU.Hardware.Linux.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.OSX='BU.Hardware.OSX.Battery.IsNotOnAC';
+alias BU.IsBatteryIsNotOnAc.Windows='BU.Hardware.Windows.Battery.IsNotOnAC';
+
+alias BU.IsBatteryIsOnAC='BU.Hardware.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.Android='BU.Hardware.Android.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.BSD='BU.Hardware.BSD.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.Haiku='BU.Hardware.Haiku.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.Linux='BU.Hardware.Linux.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.OSX='BU.Hardware.OSX.Battery.IsOnAC';
+alias BU.IsBatteryIsOnAC.Windows='BU.Hardware.Windows.Battery.IsOnAC';
+
+alias BU.BatteryHasHistory='BU.Hardware.Battery.HasHistory';
+alias BU.BatteryHasHistory.Android='BU.Hardware.Android.Battery.HasHistory';
+alias BU.BatteryHasHistory.BSD='BU.Hardware.BSD.Battery.HasHistory';
+alias BU.BatteryHasHistory.Haiku='BU.Hardware.Haiku.Battery.HasHistory';
+alias BU.BatteryHasHistory.Linux='BU.Hardware.Linux.Battery.HasHistory';
+alias BU.BatteryHasHistory.OSX='BU.Hardware.OSX.Battery.HasHistory';
+alias BU.BatteryHasHistory.Windows='BU.Hardware.Windows.Battery.HasHistory';
+
+alias BU.BatteryHasPowerSupply='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.Android='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.BSD='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.Haiku='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.Linux='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.OSX='BU.Hardware.Battery.HasPowerSupply';
+alias BU.BatteryHasPowerSupply.Windows='BU.Hardware.Battery.HasPowerSupply';
+
+alias BU.BatteryHasStatistics='BU.Hardware.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.Android='BU.Hardware.Android.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.BSD='BU.Hardware.BSD.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.Haiku='BU.Hardware.Haiku.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.Linux='BU.Hardware.Linux.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.OSX='BU.Hardware.OSX.Battery.HasStatistics';
+alias BU.BatteryHasStatistics.Windows='BU.Hardware.Windows.Battery.HasStatistics';
+
+alias BU.BatteryIsPresent='BU.Hardware.Battery.IsPresent';
+alias BU.BatteryIsPresent.Android='BU.Hardware.Android.Battery.IsPresent';
+alias BU.BatteryIsPresent.BSD='BU.Hardware.BSD.Battery.IsPresent';
+alias BU.BatteryIsPresent.Haiku='BU.Hardware.Haiku.Battery.IsPresent';
+alias BU.BatteryIsPresent.Linux='BU.Hardware.Linux.Battery.IsPresent';
+alias BU.BatteryIsPresent.OSX='BU.Hardware.OSX.Battery.IsPresent';
+alias BU.BatteryIsPresent.Windows='BU.Hardware.Windows.Battery.IsPresent';
+
+alias BU.BatteryIsRechargeable='BU.Hardware.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.Android='BU.Hardware.Android.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.BSD='BU.Hardware.BSD.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.Haiku='BU.Hardware.Haiku.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.Linux='BU.Hardware.Linux.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.OSX='BU.Hardware.OSX.Battery.IsRechargeable';
+alias BU.BatteryIsRechargeable.Windows='BU.Hardware.Windows.Battery.IsRechargeable';
+
+## ----------------------------------------------
+
+## BATTERY VALUES GETTERS
+
+alias BU.GetBatteryCapacity='BU.Hardware.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.Android='BU.Hardware.Android.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.BSD='BU.Hardware.BSD.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.Haiku='BU.Hardware.Haiku.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.Linux='BU.Hardware.Linux.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.OSX='BU.Hardware.OSX.Battery.GetCapacity';
+alias BU.GetBatteryCapacity.Windows='BU.Hardware.Windows.Battery.GetCapacity';
+
+alias BU.GetBatteryEnergy='BU.Hardware.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.Android='BU.Hardware.Android.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.BSD='BU.Hardware.BSD.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.Haiku='BU.Hardware.Haiku.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.Linux='BU.Hardware.Linux.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.OSX='BU.Hardware.OSX.Battery.GetEnergy';
+alias BU.GetBatteryEnergy.Windows='BU.Hardware.Windows.Battery.GetEnergy';
+
+alias BU.GetBatteryEnergyEmpty='BU.Hardware.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.Android='BU.Hardware.Android.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.BSD='BU.Hardware.BSD.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.Haiku='BU.Hardware.Haiku.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.Linux='BU.Hardware.Linux.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.OSX='BU.Hardware.OSX.Battery.GetEnergyEmpty';
+alias BU.GetBatteryEnergyEmpty.Windows='BU.Hardware.Windows.Battery.GetEnergyEmpty';
+
+alias BU.GetBatteryEnergyFull='BU.Hardware.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.Android='BU.Hardware.Android.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.BSD='BU.Hardware.BSD.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.Haiku='BU.Hardware.Haiku.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.Linux='BU.Hardware.Linux.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.OSX='BU.Hardware.OSX.Battery.GetEnergyFull';
+alias BU.GetBatteryEnergyFull.Windows='BU.Hardware.Windows.Battery.GetEnergyFull';
+
+alias BU.GetBatteryFullDesign='BU.Hardware.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.Android='BU.Hardware.Android.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.BSD='BU.Hardware.BSD.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.Haiku='BU.Hardware.Haiku.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.Linux='BU.Hardware.Linux.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.OSX='BU.Hardware.OSX.Battery.GetEnergyFullDesign';
+alias BU.GetBatteryFullDesign.Windows='BU.Hardware.Windows.Battery.GetEnergyFullDesign';
+
+alias BU.GetBatteryEnergyRate='BU.Hardware.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.Android='BU.Hardware.Android.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.BSD='BU.Hardware.BSD.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.Haiku='BU.Hardware.Haiku.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.Linux='BU.Hardware.Linux.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.OSX='BU.Hardware.OSX.Battery.GetEnergyRate';
+alias BU.GetBatteryEnergyRate.Windows='BU.Hardware.Windows.Battery.GetEnergyRate';
+
+alias BU.GetBatteryModel='BU.Hardware.Battery.GetModel';
+alias BU.GetBatteryModel.Android='BU.Hardware.Android.Battery.GetModel';
+alias BU.GetBatteryModel.BSD='BU.Hardware.BSD.Battery.GetModel';
+alias BU.GetBatteryModel.Haiku='BU.Hardware.Haiku.Battery.GetModel';
+alias BU.GetBatteryModel.Linux='BU.Hardware.Linux.Battery.GetModel';
+alias BU.GetBatteryModel.OSX='BU.Hardware.OSX.Battery.GetModel';
+alias BU.GetBatteryModel.Windows='BU.Hardware.Windows.Battery.GetModel';
+
+alias BU.GetBatteryNativePath='BU.Hardware.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.Android='BU.Hardware.Android.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.BSD='BU.Hardware.BSD.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.Haiku='BU.Hardware.Haiku.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.Linux='BU.Hardware.Linux.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.OSX='BU.Hardware.OSX.Battery.GetNativePath';
+alias BU.GetBatteryNativePath.Windows='BU.Hardware.Windows.Battery.GetNativePath';
+
+alias BU.GetBatteryPercentage='BU.Hardware.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.Android='BU.Hardware.Android.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.BSD='BU.Hardware.BSD.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.Haiku='BU.Hardware.Haiku.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.Linux='BU.Hardware.Linux.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.OSX='BU.Hardware.OSX.Battery.GetPercentage';
+alias BU.GetBatteryPercentage.Windows='BU.Hardware.Windows.Battery.GetPercentage';
+
+alias BU.GetBatterySerialNumber='BU.Hardware.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.Android='BU.Hardware.Android.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.BSD='BU.Hardware.BSD.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.Haiku='BU.Hardware.Haiku.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.Linux='BU.Hardware.Linux.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.OSX='BU.Hardware.OSX.Battery.GetSerialNumber';
+alias BU.GetBatterySerialNumber.Windows='BU.Hardware.Windows.Battery.GetSerialNumber';
+
+alias BU.GetBatteryState='BU.Hardware.Battery.GetState';
+alias BU.GetBatteryState.Android='BU.Hardware.Android.Battery.GetState';
+alias BU.GetBatteryState.BSD='BU.Hardware.BSD.Battery.GetState';
+alias BU.GetBatteryState.Haiku='BU.Hardware.Haiku.Battery.GetState';
+alias BU.GetBatteryState.Linux='BU.Hardware.Linux.Battery.GetState';
+alias BU.GetBatteryState.OSX='BU.Hardware.OSX.Battery.GetState';
+alias BU.GetBatteryState.Windows='BU.Hardware.WindowsBattery.GetState';
+
+alias BU.GetBatteryTechnology='BU.Hardware.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.Android='BU.Hardware.Android.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.BSD='BU.Hardware.BSD.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.Haiku='BU.Hardware.Haiku.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.Linux='BU.Hardware.Linux.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.OSX='BU.Hardware.OSX.Battery.GetTechnology';
+alias BU.GetBatteryTechnology.Windows='BU.Hardware.Windows.Battery.GetTechnology';
+
+alias BU.GetBatteryTimeBeforeFullCharge='BU.Hardware.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.Android='BU.Hardware.Android.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.BSD='BU.Hardware.BSD.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.Haiku='BU.Hardware.Haiku.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.Linux='BU.Hardware.Linux.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.OSX='BU.Hardware.OSX.Battery.GetTimeBeforeFullCharge';
+alias BU.GetBatteryTimeBeforeFullCharge.Windows='BU.Hardware.Windows.Battery.GetTimeBeforeFullCharge';
+
+alias BU.GetBatteryVendor='BU.Hardware.Battery.GetVendor';
+alias BU.GetBatteryVendor.Android='BU.Hardware.Android.Battery.GetVendor';
+alias BU.GetBatteryVendor.BSD='BU.Hardware.BSD.Battery.GetVendor';
+alias BU.GetBatteryVendor.Haiku='BU.Hardware.Haiku.Battery.GetVendor';
+alias BU.GetBatteryVendor.Linux='BU.Hardware.Linux.Battery.GetVendor';
+alias BU.GetBatteryVendor.OSX='BU.Hardware.OSX.Battery.GetVendor';
+alias BU.GetBatteryVendor.Windows='BU.Hardware.Windows.Battery.GetVendor';
+
+alias BU.GetBatteryVoltage='BU.Hardware.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.Android='BU.Hardware.Android.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.BSD='BU.Hardware.BSD.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.Haiku='BU.Hardware.Haiku.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.Linux='BU.Hardware.Linux.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.OSX='BU.Hardware.OSX.Battery.GetVoltage';
+alias BU.GetBatteryVoltage.Windows='BU.Hardware.Windows.Battery.GetVoltage';
+
+alias BU.GetBatteryWarningLevel='BU.Hardware.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.Android='BU.Hardware.Android.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.BSD='BU.Hardware.BSD.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.Haiku='BU.Hardware.Haiku.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.Linux='BU.Hardware.Linux.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.OSX='BU.Hardware.OSX.Battery.GetWarningLevel';
+alias BU.GetBatteryWarningLevel.Windows='BU.Hardware.Windows.Battery.GetWarningLevel';
+
 ## ----------------------------------------------
 
 
