--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -241,9 +241,35 @@ alias BU.GetBatteryWarningLevel.Windows='BU.Hardware.Windows.Battery.GetWarningL
 
 ###################################### DEFINING ALIASES - CPU #####################################
 
-#### CATEGORY : ""
+#### CATEGORY : "PROCCESSING THE CPU INFORMATIONS"
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "CHECK CPU INFORMATIONS"
+
+alias BU.IsCPU32Bits='BU.Hardware.CPU.Is32Bits';
+
+alias BU.IsCPU64Bits='BU.Hardware.CPU.Is64Bits';
+
+alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchAArch64='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchARM32='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchAR64='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchAMD64='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchi386='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+
+## ----------------------------------------------
+
+## SUB-CATEGORY : "GET CPU INFORMATIONS"
 
 ## ----------------------------------------------
 
