--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -246,8 +246,20 @@ alias BU.GetBatteryWarningLevel.Windows='BU.Hardware.Windows.Battery.GetWarningL
 ## SUB-CATEGORY : "CHECK CPU INFORMATIONS"
 
 alias BU.IsCPU32Bits='BU.Hardware.CPU.Is32Bits';
+alias BU.IsCPU32Bits.Android='BU.Hardware.Android.CPU.Is32Bits';
+alias BU.IsCPU32Bits.BSD='BU.Hardware.BSD.CPU.Is32Bits';
+alias BU.IsCPU32Bits.Haiku='BU.Hardware.Haiku.CPU.Is32Bits';
+alias BU.IsCPU32Bits.Linux='BU.Hardware.Linux.CPU.Is32Bits';
+alias BU.IsCPU32Bits.OSX='BU.Hardware.OSX.CPU.Is32Bits';
+alias BU.IsCPU32Bits.Windows='BU.Hardware.Windows.CPU.Is32Bits';
 
 alias BU.IsCPU64Bits='BU.Hardware.CPU.Is64Bits';
+alias BU.IsCPU64Bits='BU.Hardware.Android.CPU.Is64Bits';
+alias BU.IsCPU64Bits='BU.Hardware.BSD.CPU.Is64Bits';
+alias BU.IsCPU64Bits.Haiku='BU.Hardware.Haiku.CPU.Is64Bits';
+alias BU.IsCPU64Bits.Linux='BU.Hardware.Linux.CPU.Is64Bits';
+alias BU.IsCPU64Bits.OSX='BU.Hardware.OSX.CPU.Is64Bits';
+alias BU.IsCPU64Bits.Windows='BU.Hardware.Windows.CPU.Is64Bits';
 
 alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArch';
 
