--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -254,29 +254,83 @@ alias BU.IsCPU32Bits.OSX='BU.Hardware.OSX.CPU.Is32Bits';
 alias BU.IsCPU32Bits.Windows='BU.Hardware.Windows.CPU.Is32Bits';
 
 alias BU.IsCPU64Bits='BU.Hardware.CPU.Is64Bits';
-alias BU.IsCPU64Bits='BU.Hardware.Android.CPU.Is64Bits';
-alias BU.IsCPU64Bits='BU.Hardware.BSD.CPU.Is64Bits';
+alias BU.IsCPU64Bits.Android='BU.Hardware.Android.CPU.Is64Bits';
+alias BU.IsCPU64Bits.BSD='BU.Hardware.BSD.CPU.Is64Bits';
 alias BU.IsCPU64Bits.Haiku='BU.Hardware.Haiku.CPU.Is64Bits';
 alias BU.IsCPU64Bits.Linux='BU.Hardware.Linux.CPU.Is64Bits';
 alias BU.IsCPU64Bits.OSX='BU.Hardware.OSX.CPU.Is64Bits';
 alias BU.IsCPU64Bits.Windows='BU.Hardware.Windows.CPU.Is64Bits';
 
 alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAArch64='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchARM32='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAR64='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAR64='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAMD64='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchi386='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.Windows.CPU.IsArch';
 
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
 alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
 
 alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
 
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
 alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
 
 ## ----------------------------------------------
