--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -262,76 +262,76 @@ alias BU.IsCPU64Bits.OSX='BU.Hardware.OSX.CPU.Is64Bits';
 alias BU.IsCPU64Bits.Windows='BU.Hardware.Windows.CPU.Is64Bits';
 
 alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAArch32='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAArch32.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAArch32.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAArch32.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAArch32.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAArch32.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAArch32.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAArch64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAArch64='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAArch64.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAArch64.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAArch64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAArch64.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAArch64.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAArch64.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchARM32='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchARM32='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchARM32.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchARM32.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchARM32.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchARM32.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchARM32.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchARM32.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAR64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAR64='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAR64.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAR64.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAR64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAR64.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAR64.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAR64.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchAMD64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAMD64='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAMD64.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchAMD64.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchAMD64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchAMD64.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchAMD64.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchAMD64.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchi386='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchi386='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchi386.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchi386.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchi386.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchi386.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchi386.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchi386.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchPPC.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchPPC.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchPPC.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchPPC.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchPPC.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchPPC.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchMIPS.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchMIPS.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchMIPS.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchMIPS.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchMIPS.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchMIPS.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
+alias BU.IsCPUArchRISCV.Android='BU.Hardware.Android.CPU.IsArch';
+alias BU.IsCPUArchRISCV.BSD='BU.Hardware.BSD.CPU.IsArch';
+alias BU.IsCPUArchRISCV.Haiku='BU.Hardware.Haiku.CPU.IsArch';
+alias BU.IsCPUArchRISCV.Linux='BU.Hardware.Linux.CPU.IsArch';
+alias BU.IsCPUArchRISCV.OSX='BU.Hardware.OSX.CPU.IsArch';
+alias BU.IsCPUArchRISCV.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 ## ----------------------------------------------
 
