--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -337,6 +337,20 @@ alias BU.IsCPUArchRISCV.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 ## SUB-CATEGORY : "GET CPU INFORMATIONS"
 
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
+alias BU.GetCPU='BU.Hardware.CPU';
+
 ## ----------------------------------------------
 
 
