--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -337,19 +337,45 @@ alias BU.IsCPUArchRISCV.Windows='BU.Hardware.Windows.CPU.IsArch';
 
 ## SUB-CATEGORY : "GET CPU INFORMATIONS"
 
-alias BU.GetCPU='BU.Hardware.CPU';
+alias BU.GetCPUArch='BU.Hardware.CPU.GetArch';
+alias BU.GetCPUArch.Android='BU.Hardware.Android.CPU.GetArch';
+alias BU.GetCPUArch.BSD='BU.Hardware.BSD.CPU.GetArch';
+alias BU.GetCPUArch.Haiku='BU.Hardware.Haiku.CPU.GetArch';
+alias BU.GetCPUArch.Linux='BU.Hardware.Linux.CPU.GetArch';
+alias BU.GetCPUArch.OSX='BU.Hardware.OSX.CPU.GetArch';
+alias BU.GetCPUArch.Windows='BU.Hardware.Windows.CPU.GetArch';
 
-alias BU.GetCPU='BU.Hardware.CPU';
+alias BU.GetCPUClockFrequency='BU.Hardware.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.Android='BU.Hardware.Android.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.BSD='BU.Hardware.BSD.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.Haiku='BU.Hardware.Haiku.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.Linux='BU.Hardware.Linux.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.OSX='BU.Hardware.OSX.CPU.GetClockFrequency';
+alias BU.GetCPUClockFrequency.Windows='BU.Hardware.Windows.CPU.GetClockFrequency';
 
-alias BU.GetCPU='BU.Hardware.CPU';
+alias BU.GetCPUInfos='BU.Hardware.CPU.GetInfos';
+alias BU.GetCPUInfos.Android='BU.Hardware.Android.CPU.GetInfos';
+alias BU.GetCPUInfos.BSD='BU.Hardware.BSD.CPU.GetInfos';
+alias BU.GetCPUInfos.Haiku='BU.Hardware.Haiku.CPU.GetInfos';
+alias BU.GetCPUInfos.Linux='BU.Hardware.Linux.CPU.GetInfos';
+alias BU.GetCPUInfos.OSX='BU.Hardware.OSX.CPU.GetInfos';
+alias BU.GetCPUInfos.Windows='BU.Hardware.Windows.CPU.GetInfos';
 
-alias BU.GetCPU='BU.Hardware.CPU';
+alias BU.GetCPUCoresNumber='BU.Hardware.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.Android='BU.Hardware.Android.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.BSD='BU.Hardware.BSD.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.Haiku='BU.Hardware.Haiku.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.Linux='BU.Hardware.Linux.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.OSX='BU.Hardware.OSX.CPU.GetCoresNumber';
+alias BU.GetCPUCoresNumber.Windows='BU.Hardware.Windows.CPU.GetCoresNumber';
 
-alias BU.GetCPU='BU.Hardware.CPU';
-
-alias BU.GetCPU='BU.Hardware.CPU';
-
-alias BU.GetCPU='BU.Hardware.CPU';
+alias BU.GetCPUVendor='BU.Hardware.CPU.GetVendor';
+alias BU.GetCPUVendor.Android='BU.Hardware.Android.CPU.GetVendor';
+alias BU.GetCPUVendor.BSD='BU.Hardware.BSD.CPU.GetVendor';
+alias BU.GetCPUVendor.Haiku='BU.Hardware.Haiku.CPU.GetVendor';
+alias BU.GetCPUVendor.Linux='BU.Hardware.Linux.CPU.GetVendor';
+alias BU.GetCPUVendor.OSX='BU.Hardware.OSX.CPU.GetVendor';
+alias BU.GetCPUVendor.Windows='BU.Hardware.Windows.CPU.GetVendor';
 
 ## ----------------------------------------------
 
