--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -389,7 +389,13 @@ alias BU.GetCPUVendor.Windows='BU.Hardware.Windows.CPU.GetVendor';
 
 #### CATEGORY : ""
 
-## SUB-CATEGORY : ""
+## SUB-CATEGORY : "CHECKING THE HARD DRIVE(S) INFORMATIONS"
+
+alias BU.HD='BU.Hardware.Drive.';
+
+## ----------------------------------------------
+
+## SUb-CATEGORY : "GETTING THE HARD DRIVE(S) INFORMATIONS"
 
 ## ----------------------------------------------
 
