--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -189,7 +189,7 @@ alias BU.GetBatteryState.BSD='BU.Hardware.BSD.Battery.GetState';
 alias BU.GetBatteryState.Haiku='BU.Hardware.Haiku.Battery.GetState';
 alias BU.GetBatteryState.Linux='BU.Hardware.Linux.Battery.GetState';
 alias BU.GetBatteryState.OSX='BU.Hardware.OSX.Battery.GetState';
-alias BU.GetBatteryState.Windows='BU.Hardware.WindowsBattery.GetState';
+alias BU.GetBatteryState.Windows='BU.Hardware.Windows.Battery.GetState';
 
 alias BU.GetBatteryTechnology='BU.Hardware.Battery.GetTechnology';
 alias BU.GetBatteryTechnology.Android='BU.Hardware.Android.Battery.GetTechnology';
@@ -385,7 +385,13 @@ alias BU.GetCPUArch.Windows='BU.Hardware.Windows.CPU.GetArch';
 
 ## SUB-CATEGORY : "CHECKING THE CPU(s) CORES DATA"
 
-alias BU.IsCPUMonocore='';
+alias BU.IsCPUMonocore='BU.Hardware.CPU.IsMonocore';
+alias BU.IsCPUMonocore.Android='BU.Hardware.Android.CPU.IsMonocore';
+alias BU.IsCPUMonocore.BSD='BU.Hardware.BSD.CPU.IsMonocore';
+alias BU.IsCPUMonocore.Haiku='BU.Hardware.Haiku.CPU.IsMonocore';
+alias BU.IsCPUMonocore.Linux='BU.Hardware.Linux.CPU.IsMonocore';
+alias BU.IsCPUMonocore.OSX='BU.Hardware.OSX.CPU.IsMonocore';
+alias BU.IsCPUMonocore.Windows='BU.Hardware.Windows.CPU.IsMonocore';
 
 ## ----------------------------------------------
 
@@ -399,9 +405,21 @@ alias BU.GetCPUCoresNumber.Linux='BU.Hardware.Linux.CPU.GetCoresNumber';
 alias BU.GetCPUCoresNumber.OSX='BU.Hardware.OSX.CPU.GetCoresNumber';
 alias BU.GetCPUCoresNumber.Windows='BU.Hardware.Windows.CPU.GetCoresNumber';
 
-alias ='BU.Hardware.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber='BU.Hardware.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.Android='BU.Hardware.Android.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.BSD='BU.Hardware.BSD.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.Haiku='BU.Hardware.Haiku.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.Linux='BU.Hardware.Linux.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.OSX='BU.Hardware.OSX.CPU.GetLogicalCoresNumber';
+alias BU.GetCPULogicalCoresNumber.Windows='BU.Hardware.Windows.CPU.GetLogicalCoresNumber';
 
-alias ='BU.Hardware.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber='BU.Hardware.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.Android='BU.Hardware.Android.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.BSD='BU.Hardware.BSD.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.Haiku='BU.Hardware.Haiku.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.Linux='BU.Hardware.Linux.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.OSX='BU.Hardware.OSX.CPU.GetPhysicalCoresNumber';
+alias BU.GetCPUPhysicalCoresNumber.Windows='BU.Hardware.Windows.CPU.GetPhysicalCoresNumber';
 
 ## ----------------------------------------------
 
@@ -415,7 +433,7 @@ alias ='BU.Hardware.CPU.GetPhysicalCoresNumber';
 
 ## ----------------------------------------------
 
-## SUB-CATEGORY : "GETTING THE CPU'S ClOCK DATA"
+## SUB-CATEGORY : "GETTING THE CPU'S CLOCK DATA"
 
 alias BU.GetCPUClockFrequency='BU.Hardware.CPU.GetClockFrequency';
 alias BU.GetCPUClockFrequency.Android='BU.Hardware.Android.CPU.GetClockFrequency';
