--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -291,77 +291,77 @@ alias BU.IsCPU64Bits.Linux='BU.Hardware.Linux.CPU.Is64Bits';
 alias BU.IsCPU64Bits.OSX='BU.Hardware.OSX.CPU.Is64Bits';
 alias BU.IsCPU64Bits.Windows='BU.Hardware.Windows.CPU.Is64Bits';
 
-alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAArch32.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAArch32.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAArch32.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAArch32.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAArch32.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAArch32.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAArch32='BU.Hardware.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.Android='BU.Hardware.Android.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.BSD='BU.Hardware.BSD.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.Haiku='BU.Hardware.Haiku.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.Linux='BU.Hardware.Linux.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.OSX='BU.Hardware.OSX.CPU.IsArchAArch32';
+alias BU.IsCPUArchAArch32.Windows='BU.Hardware.Windows.CPU.IsArchAArch32';
 
-alias BU.IsCPUArchAArch64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAArch64.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAArch64.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAArch64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAArch64.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAArch64.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAArch64.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAArch64='BU.Hardware.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.Android='BU.Hardware.Android.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.BSD='BU.Hardware.BSD.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.Haiku='BU.Hardware.Haiku.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.Linux='BU.Hardware.Linux.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.OSX='BU.Hardware.OSX.CPU.IsArchAArch64';
+alias BU.IsCPUArchAArch64.Windows='BU.Hardware.Windows.CPU.IsArchAArch64';
 
-alias BU.IsCPUArchARM32='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchARM32.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchARM32.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchARM32.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchARM32.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchARM32.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchARM32.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchARM32='BU.Hardware.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.Android='BU.Hardware.Android.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.BSD='BU.Hardware.BSD.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.Haiku='BU.Hardware.Haiku.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.Linux='BU.Hardware.Linux.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.OSX='BU.Hardware.OSX.CPU.IsArchARM32';
+alias BU.IsCPUArchARM32.Windows='BU.Hardware.Windows.CPU.IsArchARM32';
 
-alias BU.IsCPUArchAR64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAR64.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAR64.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAR64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAR64.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAR64.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAR64.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchARM64='BU.Hardware.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.Android='BU.Hardware.Android.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.BSD='BU.Hardware.BSD.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.Haiku='BU.Hardware.Haiku.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.Linux='BU.Hardware.Linux.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.OSX='BU.Hardware.OSX.CPU.IsArchARM64';
+alias BU.IsCPUArchARM64.Windows='BU.Hardware.Windows.CPU.IsArchARM64';
 
-alias BU.IsCPUArchAMD64='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchAMD64.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchAMD64.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchAMD64.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchAMD64.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchAMD64.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchAMD64.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchAMD64='BU.Hardware.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.Android='BU.Hardware.Android.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.BSD='BU.Hardware.BSD.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.Haiku='BU.Hardware.Haiku.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.Linux='BU.Hardware.Linux.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.OSX='BU.Hardware.OSX.CPU.IsArchAMD64';
+alias BU.IsCPUArchAMD64.Windows='BU.Hardware.Windows.CPU.IsArchAMD64';
 
-alias BU.IsCPUArchi386='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchi386.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchi386.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchi386.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchi386.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchi386.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchi386.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchi386='BU.Hardware.CPU.IsArchi386';
+alias BU.IsCPUArchi386.Android='BU.Hardware.Android.CPU.IsArchi386';
+alias BU.IsCPUArchi386.BSD='BU.Hardware.BSD.CPU.IsArchi386';
+alias BU.IsCPUArchi386.Haiku='BU.Hardware.Haiku.CPU.IsArchi386';
+alias BU.IsCPUArchi386.Linux='BU.Hardware.Linux.CPU.IsArchi386';
+alias BU.IsCPUArchi386.OSX='BU.Hardware.OSX.CPU.IsArchi386';
+alias BU.IsCPUArchi386.Windows='BU.Hardware.Windows.CPU.IsArchi386';
 
-alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchPPC.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchPPC.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchPPC.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchPPC.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchPPC.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchPPC.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchPPC='BU.Hardware.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.Android='BU.Hardware.Android.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.BSD='BU.Hardware.BSD.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.Haiku='BU.Hardware.Haiku.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.Linux='BU.Hardware.Linux.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.OSX='BU.Hardware.OSX.CPU.IsArchPPC';
+alias BU.IsCPUArchPPC.Windows='BU.Hardware.Windows.CPU.IsArchPPC';
 
-alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchMIPS.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchMIPS.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchMIPS.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchMIPS.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchMIPS.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchMIPS.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchMIPS='BU.Hardware.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.Android='BU.Hardware.Android.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.BSD='BU.Hardware.BSD.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.Haiku='BU.Hardware.Haiku.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.Linux='BU.Hardware.Linux.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.OSX='BU.Hardware.OSX.CPU.IsArchMIPS';
+alias BU.IsCPUArchMIPS.Windows='BU.Hardware.Windows.CPU.IsArchMIPS';
 
-alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArch';
-alias BU.IsCPUArchRISCV.Android='BU.Hardware.Android.CPU.IsArch';
-alias BU.IsCPUArchRISCV.BSD='BU.Hardware.BSD.CPU.IsArch';
-alias BU.IsCPUArchRISCV.Haiku='BU.Hardware.Haiku.CPU.IsArch';
-alias BU.IsCPUArchRISCV.Linux='BU.Hardware.Linux.CPU.IsArch';
-alias BU.IsCPUArchRISCV.OSX='BU.Hardware.OSX.CPU.IsArch';
-alias BU.IsCPUArchRISCV.Windows='BU.Hardware.Windows.CPU.IsArch';
+alias BU.IsCPUArchRISCV='BU.Hardware.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.Android='BU.Hardware.Android.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.BSD='BU.Hardware.BSD.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.Haiku='BU.Hardware.Haiku.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.Linux='BU.Hardware.Linux.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.OSX='BU.Hardware.OSX.CPU.IsArchRISCV';
+alias BU.IsCPUArchRISCV.Windows='BU.Hardware.Windows.CPU.IsArchRISCV';
 
 ## ----------------------------------------------
 
