Added 5 new files into the Hardware module

--- a/install/.Bash-utils/config/modules/Hardware/Aliases.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Aliases.conf
@@ -393,6 +393,14 @@ alias BU.IsCPUMonocore.Linux='BU.Hardware.Linux.CPU.IsMonocore';
 alias BU.IsCPUMonocore.OSX='BU.Hardware.OSX.CPU.IsMonocore';
 alias BU.IsCPUMonocore.Windows='BU.Hardware.Windows.CPU.IsMonocore';
 
+alias BU.IsCPUMulticore='BU.Hardware.CPU.IsMulticore';
+alias BU.IsCPUMulticore.Android='BU.Hardware.Android.CPU.IsMulticore';
+alias BU.IsCPUMulticore.BSD='BU.Hardware.BSD.CPU.IsMulticore';
+alias BU.IsCPUMulticore.Haiku='BU.Hardware.Haiku.CPU.IsMulticore';
+alias BU.IsCPUMulticore.Linux='BU.Hardware.Linux.CPU.IsMulticore';
+alias BU.IsCPUMulticore.OSX='BU.Hardware.OSX.CPU.IsMulticore';
+alias BU.IsCPUMulticore.Windows='BU.Hardware.Windows.CPU.IsMulticore';
+
 ## ----------------------------------------------
 
 ## SUB-CATEGORY : "GETTING THE CPU(s) CORES DATA"
