--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -33,9 +33,20 @@ __BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT
 
 ## "lib" FOLDER'S CONTENT.
 
-# Bash Utils "Hardware" module's library directory                                                  |   Default parent folder --> "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}/" (Bash-utils/lib/functions).
-__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')"  || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}"                                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                                  "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+# Bash Utils "Hardware" module's library directory  |   Default parent folder --> "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}/" (Bash-utils/lib/functions).
+__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')" || {
+    printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  \
+        "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH';
+
+    BU.ModuleInit.MsgAbort;
+
+    BU.ModuleInit.AskPrintLog;
+
+    BU.ModuleInit.IsInScript && exit 1; return 1;
+};
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" 'Dirpath' \
+    "This global variable stores the path of the « Hardware » module's functions folder" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 11 ))";
 
 ## ----------------------------------------------
 
@@ -78,7 +89,7 @@ if BU.Main.OS.IsBSD; then
     elif    BU.Main.OS.IsNetBSD;    then v_hardware_modinit_bsd_sys="NetBSD";
     elif    BU.Main.OS.IsOpenBSD;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
 
-    BU.ModuleInit.Msg "Operating system : $[v_hardware_modinit_bsd_sys]"; BU.ModuleInit.Msg;
+    BU.ModuleInit.Msg "Operating system : ${v_hardware_modinit_bsd_sys}"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "BSD" 'd')";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
