Fixed a filename issue

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -36,7 +36,7 @@ __BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT
 # Bash Utils "Hardware" module's library directory  |   Default parent folder --> "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}/" (Bash-utils/lib/functions).
 __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')" || {
     printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  \
-        "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH';
+        "${BASH_SOURCE[0]}" "${LINENO}" '${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}';
 
     BU.ModuleInit.MsgAbort;
 
@@ -77,7 +77,19 @@ __BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH="$(BU.ModuleInit.FindPath "${__BU_H
 ## HARDWARE MODULE'S INITIALIZER PATH
 
 # Hardware module's initializer file.
-__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH}" "Initializer.sh" 'f')" || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"                    "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH}" "Initializer.Hardware.sh" 'f')" || {
+    printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n" \
+        "${BASH_SOURCE[0]}" "${LINENO}" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH';
+
+    BU.ModuleInit.MsgAbort;
+
+    BU.ModuleInit.AskPrintLog;
+
+    BU.ModuleInit.IsInScript && exit 1; return 1;
+};
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "${__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH}" 'Dirpath' \
+    "This global variable stores the path of the « Hardware » module's initialization file" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 11 ))";
 
 ## ----------------------------------------------
 
