Working on the Hardware module's initializer file

--- a/install/.Bash-utils/config/modules/Hardware/CPU.conf
+++ b/install/.Bash-utils/config/modules/Hardware/CPU.conf
@@ -25,4 +25,4 @@
 
 ##
 
-__BU_HARDWARE_CPU__GLOBAL_INFOS="$(BU.Hardware.CPU.GetInfos)";
+# __BU_HARDWARE_CPU__GLOBAL_INFOS="$(BU.Hardware.CPU.GetInfos)";
