--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -96,6 +96,16 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_FILE_INITIALI
 ## HARDWARE MODULE'S "functions" FOLDER'S SUB-FOLDERS CONTENT
 
 # Path to the function files of the Hardware module's library, according to the current operating system.
+if BU.Main.OS.IsAndroid; then
+    BU.ModuleInit.Msg "Operating system : Android"; BU.ModuleInit.Msg;
+
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Android" 'd')";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Android) TO SOURCE (NOT SOURCED YET)"                          "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+fi
+
 if BU.Main.OS.IsBSD; then
     if      BU.Main.OS.IsFreeBSD;   then v_hardware_modinit_bsd_sys="FreeBSD";
     elif    BU.Main.OS.IsNetBSD;    then v_hardware_modinit_bsd_sys="NetBSD";
@@ -104,10 +114,10 @@ if BU.Main.OS.IsBSD; then
     BU.ModuleInit.Msg "Operating system : ${v_hardware_modinit_bsd_sys}"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "BSD" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : ${v_hardware_modinit_bsd_sys}) TO SOURCE (NOT SOURCED YET)"      "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : ${v_hardware_modinit_bsd_sys}) TO SOURCE (NOT SOURCED YET)"    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 
     unset v_hardware_modinit_bsd_sys;
 fi
@@ -116,7 +126,7 @@ BU.Main.OS.IsHaiku && {
     BU.ModuleInit.Msg "Operating system : Haiku"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Haiku" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
@@ -126,7 +136,7 @@ BU.Main.OS.IsLinux && {
     BU.ModuleInit.Msg "Operating system : Linux"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Linux" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
@@ -136,14 +146,28 @@ BU.Main.OS.IsOSX && {
     BU.ModuleInit.Msg "Operating system : Mac OSX"; BU.ModuleInit.Msg;
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "OSX" 'd')";
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
+if BU.Main.OS.IsWindows; then
+    BU.ModuleInit.Msg "Operating system : Windows"; BU.ModuleInit.Msg;
+
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}" "Windows" 'd')";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                              "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Windows) TO SOURCE (NOT SOURCED YET)"                          "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+fi
+
 # If the module is loaded on an unsupported OS. <-- TODO
 if [ -z "${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO}" ] || [ -z "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[*]}" ]; then return 1; fi
+
+# Sourcing the main libray files, which are not specific to any operating system, and whose each function call the OS-specific associated function.
+__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY+=("${__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH}/"*.lib);
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module (not specific to any operating system) TO SOURCE (NOT SOURCED YET)" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 
 ## ----------------------------------------------
 
