Added the new "Hardware" module's library files into the "Aliases.conf" file's categories

--- a/install/.Bash-utils/config/modules/main/OS.conf
+++ b/install/.Bash-utils/config/modules/main/OS.conf
@@ -30,6 +30,8 @@
 ## VERSION TYPES
 
 # Operating system (please respect the case, as it will matter when calling operating-systems dependent functions)
+
+# Tip : you can copy the content of each of these variables in another variable if you need to process a function which can work in another platform.
 BU.Main.OS.IsAndroid    && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='Android';
 BU.Main.OS.IsBSD        && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='BSD';
 BU.Main.OS.IsChromeOS   && declare -r __BU_MAIN_OS_OPERATING_SYSTEM='ChromeOS';
